--- a/Springboot-Microservice-kubernetes/deployment-script-for-each-service/user-service.yml
+++ b/Springboot-Microservice-kubernetes/deployment-script-for-each-service/user-service.yml
@@ -8,28 +8,27 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app : user-service-app
+      app: user-service-app
   template:
     metadata:
       labels:
         app: user-service-app
     spec:
       containers:
-      - name: user-service-app
-        image: dailycodebuffer/user-service:0.0.1
-        imagePullPolicy: Always
-        ports:
-          - containerPort: 9002
+        - name: user-service-app
+          image: protap/user-service:0.0.1
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 9002
 
 ---
-
 kind: Service
 apiVersion: v1
 metadata:
-  name:  user-service-svc
+  name: user-service-svc
 spec:
   selector:
-    app:  user-service-app
+    app: user-service-app
   ports:
-  - port:  80
-    targetPort:  9002
+    - port: 80
+      targetPort: 9002
